# llm-pain-analysis-694e-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md  dataset_summary.json
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: condition_results.tex  persona_tests.tex
paper_search_results/: LLM_avoidance_behavior_persona_generalization_safety_alignment_20260322_063029.jsonl
papers/: README.md  deep_read_notes.json  paper_metadata.json
papers/pages/: 2024_Helpful_assistant_or_fruitful_facilitator_Investigating_how_personas_affect_lang_manifest.txt  2024_Who_s_asking_User_personas_and_the_mechanics_of_latent_misalignment_manifest.txt  2025_Persistent_Personas_Role_Playing_Instruction_Following_and_Safety_in_Extended_In_manifest.txt
results/: environment.json  metrics.json
results/evaluations/: benchmark_prompts.csv  condition_metrics.csv  data_quality.json  logit_coefficients.csv  logit_summary.txt  persona_tests.csv  prompt_examples.json  run_summary.txt  topic_metrics.csv
src/: run_llm_pain_experiment.py
(+2 files in other folders)
